@@ -1,41 +1,38 @@
 package h99.ecommerce.service;
 
+import com.esotericsoftware.minlog.Log;
 import h99.ecommerce.annotation.CustomTransactional;
 import h99.ecommerce.annotation.DistributedLock;
-import h99.ecommerce.domain.Product;
-import h99.ecommerce.domain.ProductStatistics;
+import h99.ecommerce.domain.product.PopularProductRepository;
+import h99.ecommerce.domain.product.Product;
+import h99.ecommerce.domain.product.ProductStatistics;
 import h99.ecommerce.exception.NotEnoughStockException;
-import h99.ecommerce.repository.ProductRepository;
-import h99.ecommerce.repository.ProductStatisticsRepository;
+import h99.ecommerce.domain.product.ProductRepository;
+import h99.ecommerce.domain.product.ProductStatisticsRepository;
+import java.time.LocalDate;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+import java.util.Optional;
+import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.cache.annotation.CacheEvict;
 import org.springframework.cache.annotation.Cacheable;
-import org.springframework.context.annotation.Lazy;
+import org.springframework.scheduling.annotation.Async;
 import org.springframework.stereotype.Service;
 
-import java.time.LocalDate;
-import java.util.*;
-import java.util.stream.Collectors;
-
+@Slf4j
 @Service
 @RequiredArgsConstructor
 public class ProductService {
 
     private final ProductRepository productRepository;
     private final ProductStatisticsRepository productStatisticsRepository;
-
-    private ProductService self;  // Proxy를 통한 캐시 동작을 위해 자기 자신 주입
-    
-    @Autowired
-    public void setSelf(@Lazy ProductService self) {
-        this.self = self;
-    }
+    private final PopularProductRepository popularProductRepository;
 
     /**
-     * 상품 단건 조회 (캐시 적용)
-     * 캐시 키: cache:product:detail:id:{productId}
-     * TTL: 30분
+     * 상품 단건 조회 (캐시 적용) 캐시 키: cache:product:detail:id:{productId} TTL: 30분
      */
     @Cacheable(value = "product", key = "'cache:product:detail:id:' + #productId")
     public Product getProduct(Long productId) {
@@ -47,23 +44,31 @@ public class ProductService {
     }
 
     /**
-     * 상품 조회 with 조회수 증가
-     * 조회수 증가가 필요한 경우 이 메서드 사용
+     * 상품 조회 with 조회수 증가 조회수 증가가 필요한 경우 이 메서드 사용
      */
     public Product getProductWithViewCount(Long productId) {
+        Product product = getProduct(productId);
         increaseViewCountAsync(productId);
-        return self.getProduct(productId);
+        return product;
     }
 
     /**
      * 조회수 증가 (캐시 없이 매번 실행)
      */
-    private void increaseViewCountAsync(Long productId) {
+    @Async
+    protected void increaseViewCountAsync(Long productId) {
         Product product = productRepository.findOne(productId);
         if (product != null) {
             product.increaseViewCount();
             productRepository.save(product);
             updateDailyViewStatistics(productId);
+
+            try {
+                popularProductRepository.incrementScore("3days", productId, 1.0);
+                popularProductRepository.incrementScore("7days", productId, 1.0);
+            } catch (Exception e) {
+                log.error("레디스 score 증가 실패, productId: {}", productId, e);
+            }
         }
     }
 
@@ -78,7 +83,7 @@ public class ProductService {
      * 재고 존재 여부 확인
      */
     public boolean checkStockAvailable(Long productId) {
-        Product product = productRepository.findOne(productId);
+        Product product = getProduct(productId);
         if (product == null) {
             throw new IllegalArgumentException("상품을 찾을 수 없습니다. productId: " + productId);
         }
@@ -89,7 +94,7 @@ public class ProductService {
      * 재고 충분 여부 확인
      */
     public boolean checkStockEnough(Long productId, int quantity) {
-        Product product = productRepository.findOne(productId);
+        Product product = getProduct(productId);
         if (product == null) {
             throw new IllegalArgumentException("상품을 찾을 수 없습니다. productId: " + productId);
         }
@@ -97,8 +102,7 @@ public class ProductService {
     }
 
     /**
-     * 재고 차감
-     * 재고 변경 시 상품 캐시 무효화
+     * 재고 차감 재고 변경 시 상품 캐시 무효화
      */
     @DistributedLock(key = "product:stock:#{#productId}")
     @CustomTransactional
@@ -115,7 +119,8 @@ public class ProductService {
         }
 
         if (!product.hasEnoughStock(quantity)) {
-            throw new NotEnoughStockException("재고가 부족합니다. 요청수량: " + quantity + ", 현재수량: " + product.getStock().getQuantity());
+            throw new NotEnoughStockException(
+                    "재고가 부족합니다. 요청수량: " + quantity + ", 현재수량: " + product.getStock().getQuantity());
         }
 
         product.deductStock(quantity);
@@ -123,8 +128,7 @@ public class ProductService {
     }
 
     /**
-     * 재고 복구
-     * 재고 변경 시 상품 캐시 무효화
+     * 재고 복구 재고 변경 시 상품 캐시 무효화
      */
     @CacheEvict(value = "product", key = "'cache:product:detail:id:' + #productId")
     public void restoreStock(Long productId, int quantity) {
@@ -142,7 +146,8 @@ public class ProductService {
      */
     private void updateDailyViewStatistics(Long productId) {
         LocalDate today = LocalDate.now();
-        Optional<ProductStatistics> existingStats = productStatisticsRepository.findByProductIdAndDate(productId, today);
+        Optional<ProductStatistics> existingStats = productStatisticsRepository.findByProductIdAndDate(productId,
+                today);
 
         if (existingStats.isPresent()) {
             ProductStatistics stats = existingStats.get();
@@ -160,13 +165,13 @@ public class ProductService {
     }
 
     /**
-     * 주문 수량 통계 업데이트 (주문 서비스에서 호출)
-     * 통계 업데이트 시 인기 상품 캐시 삭제
+     * 주문 수량 통계 업데이트 (주문 서비스에서 호출) 통계 업데이트 시 인기 상품 캐시 삭제
      */
     @CacheEvict(value = {"popularProductsByView", "popularProductsByOrder"}, allEntries = true)
     public void updateOrderStatistics(Long productId, int quantity) {
         LocalDate today = LocalDate.now();
-        Optional<ProductStatistics> existingStats = productStatisticsRepository.findByProductIdAndDate(productId, today);
+        Optional<ProductStatistics> existingStats = productStatisticsRepository.findByProductIdAndDate(productId,
+                today);
 
         if (existingStats.isPresent()) {
             ProductStatistics stats = existingStats.get();
@@ -181,74 +186,36 @@ public class ProductService {
                     .build();
             productStatisticsRepository.save(newStats);
         }
+
+        // Redis 인기 상품 score 증가 (주문 1건당 +5점)
+        try {
+            double scoreIncrement = quantity * 5.0;
+            popularProductRepository.incrementScore("3days", productId, scoreIncrement);
+            popularProductRepository.incrementScore("7days", productId, scoreIncrement);
+        } catch (Exception e) {
+            log.error("레디스 score 증가 실패, productId: {}", productId, e);
+        }
     }
 
     /**
-     * 인기 상품 조회 (최근 3일간 조회수 기준)
-     * 캐시 키: cache:product:popular:view:{limit}
-     * TTL: 1시간
+     * 인기 상품 조회(redis)
      */
-    @Cacheable(value = "popularProductsByView", key = "'cache:product:popular:view:' + #limit")
-    public List<Product> getPopularProductsByViewCount(int limit) {
-        LocalDate endDate = LocalDate.now();
-        LocalDate startDate = endDate.minusDays(2); // 오늘 포함 3일
+    public List<Product> getPopularProducts(String period, int limit) {
+        try {
+            List<Long> productIds = popularProductRepository.getTopProducts(period, limit);
 
-        // 최근 3일간 통계 조회
-        List<ProductStatistics> recentStats = productStatisticsRepository.findByDateBetween(startDate, endDate);
+            if (productIds.isEmpty()) {
+                log.warn("해당 기간 인기상품 목록이 없습니다. 기간: {}", period);
+                return List.of();
+            }
 
-        // 상품별 조회수 합산
-        Map<Long, Integer> productViewCounts = recentStats.stream()
-                .collect(Collectors.groupingBy(
-                        ProductStatistics::getProductId,
-                        Collectors.summingInt(ProductStatistics::getViewCount)
-                ));
-
-        // 조회수 순으로 정렬하여 상위 N개 추출
-        List<Long> topProductIds = productViewCounts.entrySet().stream()
-                .sorted(Map.Entry.<Long, Integer>comparingByValue().reversed())
-                .limit(limit)
-                .map(Map.Entry::getKey)
-                .toList();
-
-        // 상품 정보 조회
-        return topProductIds.stream()
-                .map(productRepository::findOne)
-                .filter(Objects::nonNull)
-                .toList();
+            return productIds.stream()
+                    .map(this::getProduct)
+                    .filter(Objects::nonNull)
+                    .collect(Collectors.toList());
+        } catch (Exception e) {
+            log.error("인기상품 조회에 실패하였습니다.");
+            return List.of();
+        }
     }
-
-    /**
-     * 인기 상품 조회 (최근 3일간 주문 수량 기준)
-     * 캐시 키: cache:product:popular:order:{limit}
-     * TTL: 1시간
-     */
-    @Cacheable(value = "popularProductsByOrder", key = "'cache:product:popular:order:' + #limit")
-    public List<Product> getPopularProductsByOrderCount(int limit) {
-        LocalDate endDate = LocalDate.now();
-        LocalDate startDate = endDate.minusDays(2); // 오늘 포함 3일
-
-        // 최근 3일간 통계 조회
-        List<ProductStatistics> recentStats = productStatisticsRepository.findByDateBetween(startDate, endDate);
-
-        // 상품별 주문 수량 합산
-        Map<Long, Integer> productOrderCounts = recentStats.stream()
-                .collect(Collectors.groupingBy(
-                        ProductStatistics::getProductId,
-                        Collectors.summingInt(ProductStatistics::getOrderCount)
-                ));
-
-        // 주문 수량 순으로 정렬하여 상위 N개 추출
-        List<Long> topProductIds = productOrderCounts.entrySet().stream()
-                .sorted(Map.Entry.<Long, Integer>comparingByValue().reversed())
-                .limit(limit)
-                .map(Map.Entry::getKey)
-                .toList();
-
-        // 상품 정보 조회
-        return topProductIds.stream()
-                .map(productRepository::findOne)
-                .filter(Objects::nonNull)
-                .toList();
-    }
-
 }
